# invariants

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  cosmic-ray.toml  pyproject.toml  todo.md
.github/workflows/: ci.yml  publish.yml
examples/: debt.py  loan.py
invariants/: conditions.py  state.py
invariants/factories/: __init__.py  sqlalchemy.py  state.py
invariants/viz/: __main__.py  xstate.py
tests/: test_state.py  test_state_collections.py
tests/support/: orm.py  states.py
tests/test_factories/: conftest.py  test_factories.py
tests/viz/: test_xstate.py
tools/: cr_filter_annotations.py
