[project]
name = "invariants"
dynamic = ["version"]
description = "Type-safe state modeling for Python — split entity invariants into validated, immutable state classes with Pydantic"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Nick Khitrov" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.12.4",
]

[project.optional-dependencies]
factories = [
    "polyfactory>=3.0.0",
    "sqlalchemy>=2.0.44",
]

[project.urls]
Repository = "https://github.com/nkhitrov/invariants"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["invariants"]

[dependency-groups]
factories = [
    "polyfactory>=3.0.0",
    "sqlalchemy>=2.0.44",
]
lint = [
    "mypy>=1.18.2",
    "pyright>=1.1.408",
    "ruff>=0.14.6",
]
test = [
    "aiosqlite>=0.21.0",
    "cosmic-ray>=8.3",
    "dirty-equals>=0.11",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "sqlalchemy[asyncio]>=2.0.44",
]

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = "tests.*"
disable_error_code = ["empty-body"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
